NDD-000: Made a style change to stop bleeding from forms.scss into unav. Changed margin-top to 0.

--- a/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_unav.scss
+++ b/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_unav.scss
@@ -28,4 +28,8 @@
     top: 0;
   }
 
+  .nygov-universal_searcher > form {
+    margin-top: 0;
+  }
+
 } // END MIN WIDTH TABLET
